k8s/apps/outline-wiki/routing/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vservice-keycloak
spec:
  hosts:
    - "keycloak.tiny.pizza"
    - "keycloak.dwbrite.com"
  gateways:
    - istio-system/dwbrite-com-gateway
    - istio-system/tiny-pizza-gateway
  http:
    - route:
        - destination:
            host: keycloak
            port:
              number: 80
